# RAG-AI

./: INTEGRATION_GUIDE.md  README.md  activate  activate.bat  activate.csh  activate.fish  activate.nu  activate.ps1  activate_this.py  app.cpython-313.pyc.3142498590416  app.py  auth_router.py  database.py  docker-compose.yml  document.py  main.cpython-313.pyc.2692257800288  main.py  market_frontend.html  pdf_loader.cpython-312.pyc.2102895419088  pdf_loader.cpython-313.pyc.2729330948784  pdf_tracker.db  pyproject.toml  retreive.cpython-313.pyc.1819099871920  retreive.py  test_imports.py  test_langchain_imports.py  test_main_import.py  test_server.py  update_db.py  utils.py
RAG/: Dockerfile  app.py  main.py  market_frontend.html  pdf_loader.py  pdf_tracker.db
RAG/auth/: dependencies.py  router.py  utils.py
RAG/models/: magic_link.py  user.py
__pycache__/: app.cpython-313.pyc.2474104512688  main.cpython-313.pyc.1766121529360  main.cpython-313.pyc.2159171789216  pdf_loader.cpython-313.pyc.2175867042480  pdf_loader.cpython-313.pyc.2601554426544  start_app.cpython-313.pyc.2687325537504
auth/: router.py
auth/__pycache__/: router.cpython-313.pyc.1909690415792
dependencies/: database.py
dependencies/__pycache__/: database.cpython-313.pyc.1247611468464
models/: __init__.py  chat_history.py  user.py
