
[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.32.0",
    "python-jose>=3.5.0",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.46.0",
    "werkzeug>=3.0.0",
     "fastapi>=0.136.1"
]
